[package]
name = "zenoh_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtle_core = { path = "../turtle_core" }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-stream = "0.1"
serde = "1"
serde_derive = "1"
cdr = "0.2.4"
# Engine
[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render"]